--- a/.github/workflows/perltest.yml
+++ b/.github/workflows/perltest.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ '*' ]
+    branches: [ 'master', 'develop' ]
   pull_request:
-    branches: [ '*' ]
+    branches: [ 'master' ]
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
